Fix the footer positioning and aligning

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -18,10 +18,19 @@ body {
   font-weight: 900;
 }
 
+.content {
+  display: flex;
+  flex: 1;
+}
+
 .footer {
+  display: flex;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
